# PlayZy

./: README.md  build.gradle  gradle.properties  info.gradle  settings.gradle
.github/workflows/: app.yml  build.yml
app/: build.gradle
app/src/androidTest/java/com/d3dz/playzy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/d3dz/playzy/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/d3dz/playzy/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  data.h  hook.cpp  hook.h  main.cpp  module.cpp  module.h
